Merge: Fix Retry interrupt handling, CircuitBreaker semantics, and Policy ordering